Fix issue: overflowing text

--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -7,7 +7,7 @@
 #variable {
   display: flex;
   flex-direction: column;
-  flex-grow: 2;
+  width: 40%;
 }
 
 #value {
